Made it much pretty with AUTOLOAD :3

--- a/protocols.conf
+++ b/protocols.conf
@@ -4,6 +4,11 @@
 	fdsf: rhuwf
 	fbsvuer: ffiwjfo
 
+[ps]
+    source: ps aux |
+    input: ^(\w+)\s+(\d+)\s+([\d\.]+)\s+([\d\.]+)\s+(\d+)\s+(\d+)\s+([\w\?\/]+)\s+([\w\+\<]+)\s+([\d\.\:]+)\s+([\d\.\:]+)\s+(.*)$
+    keys: ['user', 'pid', 'cpu', 'mem', 'vsz', 'rss', 'tty', 'stat', 'start', 'time', 'command']
+
 [qwer]
 	popson: 0000
 	opson: 111111
