Now it's something :)

--- a/protocols.conf
+++ b/protocols.conf
@@ -1,23 +1,17 @@
 
 
-[asdf]
-	fdsf: rhuwf
-	fbsvuer: ffiwjfo
+
 
 [ps]
-    source: ps aux |
-    input: ^(\w+)\s+(\d+)\s+([\d\.]+)\s+([\d\.]+)\s+(\d+)\s+(\d+)\s+([\w\?\/]+)\s+([\w\+\<]+)\s+([\d\.\:]+)\s+([\d\.\:]+)\s+(.*)$
-    keys: ['user', 'pid', 'cpu', 'mem', 'vsz', 'rss', 'tty', 'stat', 'start', 'time', 'command']
+    source: 'ps aux |';
+    input: '^(\w+)\s+(\d+)\s+([\d\.]+)\s+([\d\.]+)\s+(\d+)\s+(\d+)\s+([\w\?\/]+)\s+([\w\+\<]+)\s+([\d\.\:]+)\s+([\d\.\:]+)\s+(.*)$';
+    keys: ['user', 'pid', 'cpu', 'mem', 'vsz', 'rss', 'tty', 'stat', 'start', 'time', 'command'];
+	exclude: '^USER';
 
-[qwer]
-	popson: 0000
-	opson: 111111
-	totson: 99999
+[ss_tulpan]
+	source: 'ss -tulpan |';
+	input: '^(\w+)\s*([\w\-]+)\s*(\d+)\s*(\d+)\s*([\d\.\*]+)\:([\d\*]+)\s*([\d\.\*]+)\:([\d\*]+)\s*(.*)\s*$';
+	keys: ['netid', 'state', 'recv', 'send', 'local_addr', 'local_port', 'peer_addr', 'peer_port', 'process'];
+	exclude: '^Netid';
 
 
-
-# Же-есть
-[tutanhamon]
-	aaaa: aaaaaaaa
-	bbbb: bbbbbbbbbb
-	ccc: ccccccccccc
