--- a/protocols.conf
+++ b/protocols.conf
@@ -8,10 +8,14 @@
     keys: ['user', 'pid', 'cpu', 'mem', 'vsz', 'rss', 'tty', 'stat', 'start', 'time', 'command'];
 	exclude: '^USER';
 
+[ss]
+	source: 'ss |';
+	input: '^(\w+)\s*([\w\-]+)\s*(\d+)\s*(\d+)\s*(\S*)[ \:](\S*)\s*(\S*)[ \:](\S*)\s*$';
+	keys: ['netid', 'state', 'recv', 'send', 'local_addr', 'local_port', 'peer_addr', 'peer_port'];
+	exclude: '^Netid';
+
 [ss_tulpan]
 	source: 'ss -tulpan |';
 	input: '^(\w+)\s*([\w\-]+)\s*(\d+)\s*(\d+)\s*([\d\.\*]+)\:([\d\*]+)\s*([\d\.\*]+)\:([\d\*]+)\s*(.*)\s*$';
 	keys: ['netid', 'state', 'recv', 'send', 'local_addr', 'local_port', 'peer_addr', 'peer_port', 'process'];
 	exclude: '^Netid';
-
-
