One more pretty commit :s

--- a/protocols.conf
+++ b/protocols.conf
@@ -3,14 +3,14 @@
 
 
 [ps]
-    source: 'ps aux |';
-    input: '^(\w+)\s+(\d+)\s+([\d\.]+)\s+([\d\.]+)\s+(\d+)\s+(\d+)\s+([\w\?\/]+)\s+([\w\+\<]+)\s+([\d\.\:]+)\s+([\d\.\:]+)\s+(.*)$';
-    keys: ['user', 'pid', 'cpu', 'mem', 'vsz', 'rss', 'tty', 'stat', 'start', 'time', 'command'];
+	source: 'ps aux |';
+	input: '^(\w+)\s+(\d+)\s+([\d\.]+)\s+([\d\.]+)\s+(\d+)\s+(\d+)\s+([\w\?\/]+)\s+([\w\+\<]+)\s+([\d\.\:]+)\s+([\d\.\:]+)\s+(.*)$';
+	keys: ['user', 'pid', 'cpu', 'mem', 'vsz', 'rss', 'tty', 'stat', 'start', 'time', 'command'];
 	exclude: '^USER';
 
 [ss]
 	source: 'ss |';
-	input: '^(\w+)\s*([\w\-]+)\s*(\d+)\s*(\d+)\s*(\S*)[ \:](\S*)\s*(\S*)[ \:](\S*)\s*$';
+	input: '^(\w+)\s*([\w\-]+)\s*(\d+)\s*(\d+)\s*([\w\d\.@\/\-\.\*]*)[ \:]([\w\d\.@\/\-\.\*]*)\s*([\w\d\.@\/\-\.\*]*)[ \:]([\w\d\.@\/\-\.\*]*)\s*$';
 	keys: ['netid', 'state', 'recv', 'send', 'local_addr', 'local_port', 'peer_addr', 'peer_port'];
 	exclude: '^Netid';
 
